// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker renders in playground 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <Icon
      color="#7f91a8"
      name="wifi-off"
    />
  }
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with custom button 1`] = `
<DatePicker
  customButton={
    <Text>
      2018-01-01T00:00:00.000Z
    </Text>
  }
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <Icon
      color="#7f91a8"
      name="wifi-off"
    />
  }
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with max date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <Icon
      color="#7f91a8"
      name="wifi-off"
    />
  }
  maxDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with min date 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  iconComponent={
    <Icon
      color="#7f91a8"
      name="wifi-off"
    />
  }
  minDate={2018-01-01T00:00:00.000Z}
  onDateChange={[Function]}
/>
`;

exports[`DatePicker works with other date formats 1`] = `
<DatePicker
  date={2018-01-01T00:00:00.000Z}
  disabled={false}
  format="L"
  iconComponent={
    <Icon
      color="#7f91a8"
      name="wifi-off"
    />
  }
  onDateChange={[Function]}
/>
`;
